Trying to fix theme and paging/sorting

--- a/Web.config
+++ b/Web.config
@@ -111,6 +111,6 @@
   </system.codedom>
   <connectionStrings>
     <remove name="LocalSqlServer"/>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\user\Desktop\Capstone-BRDR\App_Data\IVSO.mdf;Integrated Security=True" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\Bowen\Documents\Fall2019\Capstone-BRDR\App_Data\IVSO.mdf;Integrated Security=True" />
   </connectionStrings>
 </configuration>
