--- a/packages.config
+++ b/packages.config
@@ -4,7 +4,11 @@
   <package id="AspNet.ScriptManager.bootstrap" version="3.4.1" targetFramework="net461" />
   <package id="AspNet.ScriptManager.jQuery" version="3.4.1" targetFramework="net461" />
   <package id="bootstrap" version="3.4.1" targetFramework="net461" />
+  <package id="ClosedXML" version="0.94.2" targetFramework="net461" />
+  <package id="DocumentFormat.OpenXml" version="2.7.2" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
+  <package id="ExcelNumberFormat" version="1.0.3" targetFramework="net461" />
+  <package id="FastMember" version="1.3.0" targetFramework="net461" />
   <package id="jQuery" version="3.4.1" targetFramework="net461" />
   <package id="jQuery.UI.Combined" version="1.12.1" targetFramework="net461" />
   <package id="jTable" version="2.4.0" targetFramework="net461" />
@@ -35,5 +39,7 @@
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="popper.js" version="1.14.0" targetFramework="net461" />
   <package id="Respond" version="1.2.0" targetFramework="net461" />
+  <package id="System.IO.FileSystem.Primitives" version="4.0.1" targetFramework="net461" />
+  <package id="System.IO.Packaging" version="4.0.0" targetFramework="net461" />
   <package id="WebGrease" version="1.5.2" targetFramework="net461" />
 </packages>
