Migrating repo for future use

--- a/Web.config
+++ b/Web.config
@@ -115,6 +115,6 @@
   </system.codedom>
   <connectionStrings>
     <remove name="LocalSqlServer" />
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\user\Desktop\Capstone-BRDR\App_Data\IVSO.mdf;Integrated Security=True" />
+    <add name="DefaultConnection" connectionString="Data Source=162.216.113.102\MSSQLSERVER2017;Persist Security Info=True;Initial Catalog=socialev;User Id=owner;password=xLr17^k6" />
   </connectionStrings>
 </configuration>
